--- a/public/public/index.html
+++ b/public/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="eShop is the number 1 ecommerce website in the Gambia"
+      content="eBaaba No. 1 Online Shopping Website in The Gambia"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>eShop | Gambia's Number 1 Online Marketplace</title>
+    <title>eBaaba | Gambia's Number 1 Online Marketplace</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
