--- a/public/public/index.html
+++ b/public/public/index.html
@@ -39,5 +39,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
+    <script>
+        
+    </script>
   </body>
 </html>
