--- a/public/public/index.html
+++ b/public/public/index.html
@@ -9,6 +9,9 @@
       content="eBaaba No. 1 Online Shopping Website in The Gambia"
     /> 
    
+    <meta http-equiv='cache-control' content='no-cache'>
+    <meta http-equiv='expires' content='0'>
+    <meta http-equiv='pragma' content='no-cache'>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
